--- a/src/partial/button/btn-link.hbs
+++ b/src/partial/button/btn-link.hbs
@@ -1,2 +1,3 @@
 <!-- btn-link.hbs -->
-<a href="{{href}}" class="partial-btn {{btnClass}}" data-link>{{label}}</a>
+<a href="{{href}}" class="partial-btn"
+    kind="{{kind}}" spa-link>{{label}}</a>
