--- a/src/pages/feed/components/content/genre/genre.hbs
+++ b/src/pages/feed/components/content/genre/genre.hbs
@@ -1,11 +1,12 @@
 <div class="ms-4">
-    <h1 >{{genreTitle}}</h1>
+    <h1>{{genreTitle}}</h1>
 </div>
 <div class="genre-carousel" id="{{idCarousel}}">
     <div class="genre-card-container" id="{{idContainer}}">
         {{#each genreContent}}
-        <a href="/feed/{{this.id}}" data-id="{{this.id}}" class="ms-2 genre-card-link"
-            data-link>
+        <a href="/feed/{{this.id}}" data-id="{{this.id}}"
+            class="ms-2 genre-card-link"
+            spa-link>
             <div class="genre-card" title="{{this.name}}">
                 <img src="{{this.previewPath}}" alt="{{this.previewPath}}">
             </div>
