--- a/src/pages/login/components/login-form.hbs
+++ b/src/pages/login/components/login-form.hbs
@@ -11,8 +11,8 @@
             {{> button type="submit" kind="login" label="Войти"}}
 
             <div class="login-page__form-action">
-                <span>Недавно на Netflix? <a href="/register1"
-                        class="login-page__form-action-link" data-link>Зарегестрируйтесь</a></span>
+                <span>Недавно на Netflix? <a href="/start-register"
+                        class="login-page__form-action-link" spa-link>Зарегестрируйтесь</a></span>
             </div>
         </form>
     </div>
