--- a/src/partial/button/button.css
+++ b/src/partial/button/button.css
@@ -16,15 +16,49 @@
     text-decoration: none;
 }
 
+button.partial-btn[kind="primary-xl"] {
+    background-color: var(--primary);
+    color: white;
+    font-size: 24px;
+    margin-top: 24px;
+    min-height: 64px;
+    min-width: 110px;
+    padding: 20.5px 2em;
+    width: 100%;
+    box-sizing: border-box;
+    appearance: none;
+    margin: 0;
+    box-sizing: border-box;
+    letter-spacing: normal;
+    border: 0;
+    cursor: pointer;
+}
+
+.partial-btn[kind="primary-xl"] {
+    background-color: var(--primary);
+    color: white;
+    font-size: 24px;
+    margin-top: 24px;
+    min-height: 64px;
+    min-width: 110px;
+    padding: 20.5px 2em;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.partial-btn[kind="primary-xl"]:hover {
+    transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
+    background: var(--primary-hover);
+}
+
 .partial-btn[kind="login"] {
     width: 100%;
     font-size: 16px;
     font-weight: 500;
     padding: 16px;
     margin: 24px 0 12px;
-}
-
-.partial-btn[kind="main-form"] {
+    background-color: var(--primary);
+    color: white;
     appearance: none;
     font: inherit;
     margin: 0;
@@ -34,11 +68,40 @@
     cursor: pointer;
 }
 
-.partial-btn-primary {
-    background-color: var(--primary);
-}
-
-.partial-btn-primary:hover {
+.partial-btn[kind="login"]:hover {
     transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
     background: var(--primary-hover);
+}
+
+.partial-btn[kind="primary-button"] {
+    background-color: var(--primary);
+    color: white;
+    appearance: none;
+    font: inherit;
+    margin: 0;
+    box-sizing: border-box;
+    letter-spacing: normal;
+    border: 0;
+    cursor: pointer;
+}
+
+.partial-btn[kind="primary"] {
+    background-color: var(--primary);
+    color: white;
+}
+
+.partial-btn[kind="primary"]:hover {
+    transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
+    background: var(--primary-hover);
+}
+
+
+.partial-btn[kind="secondary"] {
+    background-color: none;
+    color: var(--dark);
+    font-size: 19px;
+}
+
+.partial-btn[kind="secondary"]:hover {
+    color: var(--dark-hover);
 }
