--- a/src/partial/button/button.hbs
+++ b/src/partial/button/button.hbs
@@ -1,3 +1,3 @@
-<button class="partial-btn {{extraClass}} partial-btn-primary t-white"
+<button class="partial-btn partial-btn-primary t-white"
     type="{{type}}"
     onclick="{{onclick}}" kind="{{kind}}" id="{{id}}">{{label}}</button>
