--- a/src/partial/button/button.css
+++ b/src/partial/button/button.css
@@ -105,3 +105,47 @@ button.partial-btn[kind="primary-xl"] {
 .partial-btn[kind="secondary"]:hover {
     color: var(--dark-hover);
 }
+
+.btn-action {
+    padding: 16px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    line-height: 1;
+    cursor: pointer;
+    min-height: 2rem;
+    width: auto;
+    gap: 10px;
+    border-radius: 0.25rem;
+    font-size: 0.875rem;
+    font-weight: 500;
+    transition-duration: 250ms;
+    transition-property: background-color, border-color;
+    transition-timing-function: cubic-bezier(0.9, 0, 0.51, 1);
+    text-decoration: none;
+}
+
+.btn-action[kind="play"] {
+    background: white;
+    color: black;
+}
+
+
+.btn-action[kind="info"] {
+    background: rgba(255, 255, 255, 0.20);
+    color: white;
+}
+
+.btn-action[kind="play"]:hover {
+    transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
+    background: rgba(255, 255, 255, 0.8);
+    color: black;
+}
+
+
+.btn-action[kind="info"]:hover {
+    transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
+    background: rgba(255, 255, 255, 0.4);
+    color: white;
+}
