--- a/src/partial/header/partial-header.css
+++ b/src/partial/header/partial-header.css
@@ -43,7 +43,7 @@
 }
 
 .feed-header-menu>a {
-    font-family: Netflix Sans;
+    font-family: Netflix;
     color: #fff;
     text-decoration: none;
 }
@@ -58,14 +58,11 @@
     margin-right: 0.75rem;
 }
 
-
-/* Drop Down Styles
-================================ */
 nav .drop-down {
     list-style: none;
     overflow: hidden;
     height: 200px;
-    font-family: Netflix Sans;
+    font-family: Netflix;
     width: 200px;
     margin: 0 auto;
     padding: 0;
