--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -1,10 +1,14 @@
-.genre-carousel {
+.feed-collection__container-offset {
+    margin-top: 2rem;
+}
+
+.feed-collection__carousel {
     width: 100%;
     height: 400px;
     margin-bottom: 60px;
 }
 
-.genre-card-container {
+.feed-collection__container {
     width: 100%;
     display: flex;
     overflow-x: auto;
@@ -15,18 +19,18 @@
     transition: transform 0.3s ease;
 }
 
-.genre-card {
+.feed-collection__container-card {
     min-height: 350px;
     min-width: 250px;
     border: 5px solid transparent;
 }
 
-.genre-card>img {
+.feed-collection__container-card>img {
     overflow: hidden;
     max-height: 350px;
 }
 
-.genre-card:hover>img {
+.feed-collection__container-card:hover>img {
     border: 5px solid rgba(255, 255, 255, 0.5);
     margin-top: -5px;
     box-shadow: 0 0 60px red;
