--- a/src/pages/feed/components/feed-preview.css
+++ b/src/pages/feed/components/feed-preview.css
@@ -7,15 +7,13 @@
     position: absolute;
     display: flex;
     flex-direction: column;
-    width: 600px;
+    width: 25%;
     margin-left: 50px;
-    margin-bottom: 15%;
+    margin-bottom: 10%;
     padding: 3rem;
-    background: linear-gradient(336deg, rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0) 70.71%);
-    box-shadow: 25px 25px 50px rgba(0, 0, 0, 0.6), -25px -25px 50px rgba(0, 0, 0, 0.6);
+    border-radius: 0.25rem;
+    background: linear-gradient(336deg, rgba(0, 0, 0, 0.2), rgba(255, 255, 255, 0.2) 50%);
 }
-
-
 
 .feed-content__info>p {
     line-height: 1.6;
@@ -27,14 +25,11 @@
     -webkit-box-orient: vertical;
 }
 
-
-
 .feed-page__content-actions {
     display: flex;
     flex-direction: row;
     gap: 10px;
     margin-top: auto;
-
 }
 
 .feed-page__preview-container {
