--- a/src/pages/feed/feed.css
+++ b/src/pages/feed/feed.css
@@ -1,2 +1,3 @@
 @import url(components/content/feed-content-main.css);
-@import url(components/content/genre/genre.css);
+@import url(components/feed-preview.css);
+@import url(components/feed-collection.css);
