--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -1,5 +1,5 @@
 <div class="feed-collection__container-offset">
-    <h1>{{title}}</h1>
+    <h1 class="feed-collection__title">{{title}}</h1>
 </div>
 <div class="feed-collection__carousel" id="{{carousel}}">
     <div class="feed-collection__container" id="{{container}}">
