--- a/src/pages/register/components/start-register-form.hbs
+++ b/src/pages/register/components/start-register-form.hbs
@@ -14,7 +14,7 @@
             просмотр Netflix.
         </div>
 
-        {{> btn-link href="/register2" kind="primary-xl"
+        {{> btn-link href="/register" kind="primary-xl"
         label="Далее"}}
     </div>
 </div>
