--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -1,14 +1,23 @@
+
 <div class="feed-collection__container-offset">
     <h1 class="feed-collection__title">{{title}}</h1>
 </div>
 <div class="feed-collection__carousel" id="{{carousel}}">
     <div class="feed-collection__container" id="{{container}}">
         {{#each content}}
-        <a href="/feed/{{this.id}}" data-id="{{this.id}}"
+        <a href="/feed/{{this.id}}"
             style="margin-left: 1rem;"
-            spa-link>
-            <div class="feed-collection__container-card" title="{{this.name}}">
-                <img src="{{this.previewPath}}" alt="{{this.previewPath}}">
+            spa-link media-content>
+            <div class="feed-collection__container-card"
+                title="{{this.name}}">
+                <div>
+                    <img src="{{this.previewPath}}" alt="{{this.previewPath}}">
+                    <div class="feed-collection__advanced-info">
+                        <div class="feed-collection__advanced-info__name">{{this.name}}</div>
+                        <div class="feed-collection__advanced-info__rating" data-rating="{{this.rating}}">{{this.rating}}</div>
+                    </div>
+                </div>
+
             </div>
         </a>
         {{/each}}
