--- a/src/static/assets/style.css
+++ b/src/static/assets/style.css
@@ -13,7 +13,7 @@
 @import url(../../pages/register/register.css);
 @import url(../css/header.css);
 @import url(../../pages/main/main.css);
-
+@import url(../../pages/404/404.css);
 
 @import url(../icons/netflix.css);
 
