--- a/src/static/assets/style.css
+++ b/src/static/assets/style.css
@@ -14,6 +14,7 @@
 @import url(../css/header.css);
 @import url(../../pages/main/main.css);
 @import url(../../pages/404/404.css);
+@import url(../../pages/cast/cast.css);
 
 @import url(../icons/netflix.css);
 
