finished grid layout

--- a/src/pages/cast/cast.css
+++ b/src/pages/cast/cast.css
@@ -9,6 +9,5 @@
     /*          !*'img img content'*!*/
     /*          !*'img img .';*!*/
     /*max-width: 1000px;*/
-    margin-right: auto;
-    margin-left: auto;
+    margin: 20px 25px 65px;
 }
