--- a/src/pages/feed/feed-page.hbs
+++ b/src/pages/feed/feed-page.hbs
@@ -1,4 +1,4 @@
-{{> partial-header feedPage=true}}
+{{> partial-header kind="feed-page" feedPage=true}}
 
 {{> feed-preview
 webm-url="static/wednesday.webm"
