--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -4,4 +4,12 @@
 .login-page {
     display: flex;
     flex-direction: column;
+    height: 100vh;
+}
+
+.login-page__container {
+    width: 100vw;
+    position: absolute;
+    flex-direction: column;
+    display: flex;
 }
