--- a/src/partial/footer/partial-footer.hbs
+++ b/src/partial/footer/partial-footer.hbs
@@ -1,4 +1,4 @@
-<div class="footer__border-top" kind="{{kind}}">
+<div class="footer" kind="{{kind}}">
     <div class="footer__container footer__fonts">
         <div class="footer__row">
             <div
