--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -1,5 +1,5 @@
  <div class="header-content" kind="{{kind}}">
-    <div class="row">
+    <div class="row" style="width: 100%;">
         <!-- Колонка логотипа {Существует всегда} -->
         <div class="col justify-content-start">
             {{> netflix-logo}}
@@ -40,7 +40,7 @@
             <nav style="position: absolute;">
                 <ul class="drop-down closed">
                     <li><a class="nav-button" id="dropdown"> {{> avatar
-                            avatarUrl="src/static/img/avatarStatic.jpg"
+                            avatarUrl="/src/static/img/avatarStatic.jpg"
                             username="Manmaffin"}}</a></li>
                     <li> <a id="profile">Профиль</a></li>
                     <li><a id="logout">Выйти</a></li>
