--- a/src/pages/feed/components/feed-collection.css
+++ b/src/pages/feed/components/feed-collection.css
@@ -21,6 +21,7 @@
     padding-top: 60px;
     padding-bottom: 60px;
     gap: 20px;
+    padding-left: 20px;
     transition: transform 0.2s linear;
 }
 
