--- a/src/pages/feed/components/feed-collection.hbs
+++ b/src/pages/feed/components/feed-collection.hbs
@@ -11,7 +11,7 @@
             <div>
                 <img src="{{this.previewPath}}" alt="{{this.previewPath}}">
 
-                <a href="/feed/{{this.id}}"
+                <a href="/movies/{{this.id}}"
                     style="margin-left: 1rem;"
                     spa-link>
                     <div class="feed-collection__advanced-info">
