--- a/src/pages/login/components/login-background.css
+++ b/src/pages/login/components/login-background.css
@@ -1,5 +1,5 @@
 .login-page__login-background {
-    height: calc(100vh - 206px);
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
