--- a/src/pages/main/components/main-background.css
+++ b/src/pages/main/components/main-background.css
@@ -1,5 +1,5 @@
 .main__background {
-    height: 700px;
+    min-height: 700px;
     display: flex;
     justify-content: center;
     align-items: center;
