--- a/src/pages/main/components/main-form.css
+++ b/src/pages/main/components/main-form.css
@@ -14,6 +14,17 @@
 .main-form__input {
     display: flex;
     justify-content: center;
+    gap: 10px;
     width: 100%;
     height: 60px;
+}
+
+.main-form__description,
+.main-form__email-form{
+    margin: 0;
+}
+
+.main-form__email-form__container{
+    padding-left: 2rem;
+    padding-right: 2rem;
 }
