--- a/src/partial/button/button.css
+++ b/src/partial/button/button.css
@@ -90,7 +90,8 @@ button.partial-btn[kind="primary-xl"] {
     color: white;
 }
 
-.partial-btn[kind="primary"]:hover {
+.partial-btn[kind="primary"]:hover,
+.partial-btn[kind="primary-button"]:hover {
     transition-timing-function: cubic-bezier(0.5, 0, 0.1, 1);
     background: var(--primary-hover);
 }
