--- a/src/pages/content/components/player.hbs
+++ b/src/pages/content/components/player.hbs
@@ -1,5 +1,58 @@
-<video controls poster="/static/The-Witcher-3-season-2022.jpg" controlslist="nodownload noremoteplayback" class="player">
-    <source
-        src="https://static_holi.hb.ru-msk.vkcs.cloud/Media_Files/lecture2-part2.mp4"
-        type="video/mp4" />
-</video>
+<div class="content-container">
+    <h1 class="content-container__title">Ведьмак топчик</h1>
+    <video controls poster="/static/The-Witcher-3-season-2022.jpg"
+        controlslist="nodownload noremoteplayback"
+        class="content-container__player">
+        <source
+            src="https://static_holi.hb.ru-msk.vkcs.cloud/Media_Files/lecture2-part2.mp4"
+            type="video/mp4" />
+    </video>
+    <div class="content-container__advanced-info">
+        <div class="content-container__advanced-info__meta">
+            <div class="content-container__advanced-info__meta-year"><b>Год
+                    выхода:</b>
+                2021</div>
+            <div class="content-container__advanced-info__meta-age"><b>Возрастное
+                    ограничение:</b> 16+</div>
+            <div class="content-container__advanced-info__meta-rating"><b>Рейтинг:</b>
+                7.3</div>
+            <div class="content-container__advanced-info__meta-time"><b>Длительность:</b>
+                2 часа</div>
+        </div>
+        <div class="content-container__advanced-info__about">
+            <div class="content-container__advanced-info__description">
+                Сказочка о ведьмаке
+                Чума сифилис и проказа
+                Угадай кто это?
+                Трисс Меригольд
+            </div>
+            <div class="content-container__advanced-info__genres">
+                <div class="content-container__advanced-info__genres-title"><b>Категории</b></div>
+                <div class="content-container__advanced-info__genres-list">
+
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Ужасы</a>
+
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Ужасы</a>
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Ужасы</a>
+                </div>
+            </div>
+
+            <div class="content-container__advanced-info__genres">
+                <div class="content-container__advanced-info__genres-title"><b>Актеры</b></div>
+                <div class="content-container__advanced-info__genres-list">
+
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Генри Кавил</a>
+
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Какая то белая шмара</a>
+                    <a class="content-container__advanced-info__genres-link"
+                        href="#1">Жирная негретянка</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
