--- a/src/pages/content/components/player.css
+++ b/src/pages/content/components/player.css
@@ -1,9 +1,81 @@
-.player {
-    display: block;
-    width: calc(100% - 5vw);
+.content-container {
+    padding: 16px;
+    background-color: #181818;
+    display: flex;
+    flex-direction: column;
+    max-width: 70%;
     margin: auto;
-    border: 2px solid #454545;
     margin-top: 2rem;
     margin-bottom: 2rem;
     border-radius: 0.25rem;
+}
+
+.content-container__title {
+    color: white;
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.content-container__player {
+    display: block;
+    width: 100%;
+    margin: auto;
+    border: 1px solid #454545;
+    border-radius: 0.25rem;
+}
+
+.content-container__advanced-info__meta {
+    display: flex;
+    color: aliceblue;
+    flex-direction: row;
+    gap: 10px;
+    padding: 10px;
+}
+
+.content-container__advanced-info {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 2rem;
+    font-size: 14px;
+}
+
+.content-container__advanced-info__about {
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
+    padding: 10px;
+}
+
+.content-container__advanced-info__description {
+    display: flex;
+    font-family: Netflix;
+    font-size: 14px;
+    font-weight: 500;
+    color: white;
+}
+
+.content-container__advanced-info__genres {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: row;
+    margin-left: auto;
+    gap: 10px;
+}
+
+.content-container__advanced-info__genres-title {
+    font-family: Netflix;
+    color: #777777;
+    display: flex;
+}
+
+.content-container__advanced-info__genres-link {
+    font-family: Netflix;
+    display: block;
+    color: white;
+}
+
+.content-container__advanced-info__genres-list {
+    display: flex;
+    flex-direction: column;
 }
