--- a/src/partial/header/partial-header.hbs
+++ b/src/partial/header/partial-header.hbs
@@ -42,8 +42,8 @@
                     <li><a class="nav-button" id="dropdown"> {{> avatar
                             avatarUrl="/src/static/img/avatarStatic.jpg"
                             username="Manmaffin"}}</a></li>
-                    <li> <a id="profile">Профиль</a></li>
-                    <li><a id="logout">Выйти</a></li>
+                    <li class="drop-down__li"> <a id="profile">Профиль</a></li>
+                    <li class="drop-down__li"><a id="logout">Выйти</a></li>
                 </ul>
             </nav>
             {{/if}}
