--- a/src/pages/cast/cast.css
+++ b/src/pages/cast/cast.css
@@ -2,6 +2,21 @@
 
 #cast-page {
     display: grid;
-    grid-template-columns: repeat(5, auto);
-    margin: 20px 25px 65px;
+    grid-template-columns: repeat(5, 1fr);
+    margin: 20px 25px 100px;
+}
+
+.cast-page__header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    font-size: 3rem;
+    font-weight: 900;
+    padding: 0 6%;
+    text-align: center;
+    color: #D2DBDD;
+    font-family: Netflix Sans,Helvetica Neue,Segoe UI,Roboto,Ubuntu,sans-serif;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
