--- a/src/pages/main/components/main-background.hbs
+++ b/src/pages/main/components/main-background.hbs
@@ -20,7 +20,7 @@
                             почты, чтобы создать или перезапустить
                             подписку.</h3>
                         <div class="main-form__input">
-                            {{> input-control placeholder="Email"
+                            {{> input-control default=true placeholder="Email"
                             name="email" type="email"}}
                             {{> button type="submit" label="Начать" kind="primary-button"}}
                         </div>
