--- a/src/pages/register/components/register-form.hbs
+++ b/src/pages/register/components/register-form.hbs
@@ -13,9 +13,9 @@
             Мы тоже ненавидим бумажную волокиту.
         </div>
 
-        {{> input-control kind="register-page" placeholder="Введите почту"
+        {{> input-control default=true kind="register-page" placeholder="Введите почту"
         name="email" type="email"}}
-        {{> input-control kind="register-page" placeholder="Введите пароль"
+        {{> input-control default=true kind="register-page" placeholder="Введите пароль"
         name="password"
         type="password" }}
         <div class="mt-5"></div>
