--- a/src/static/assets/style.css
+++ b/src/static/assets/style.css
@@ -14,7 +14,7 @@
 @import url(../../pages/main/main.css);
 @import url(../../pages/404/404.css);
 @import url(../../pages/content/content.css);
-
+@import url(../../pages/profile/profile-page.css);
 @import url(../icons/netflix.css);
 
 @font-face {
