--- a/src/partial/input-control/input-control.hbs
+++ b/src/partial/input-control/input-control.hbs
@@ -1,5 +1,5 @@
 {{#if default}}
-<input class="input-control" kind="{{kind}}" autocomplete={{autocomplete}}
+<input class="input-control" kind="{{kind}}" autocomplete="{{autocomplete}}"
     placeholder="{{placeholder}}" name="{{name}}" type="{{type}}"
     id="{{id}}">
 {{/if}}
