--- a/src/pages/register/components/register-form.css
+++ b/src/pages/register/components/register-form.css
@@ -4,12 +4,27 @@
     margin-top: 25px;
     color: #333333;
     font-size: 16px;
+    font-family: Netflix;
     margin-bottom: 30px;
     letter-spacing: 0;
     padding: 20px 32px 60px;
 }
 
+.register-form label {
+    font-weight: bold;
+    margin-top: 0.5rem;
+    display: block;
+}
+
 .register-form__title {
     margin-top: 0;
 
+}
+
+.register-form__step {
+    font-weight: bold;
+}
+
+.register-form__description {
+    font-weight: bold;
 }
