--- a/src/pages/profile/components/profile-form.css
+++ b/src/pages/profile/components/profile-form.css
@@ -6,11 +6,11 @@
     align-items: center;
     height: 100%;
     max-width: 600px;
-    margin: auto;
     background-color: rgba(218, 216, 216, 0.3);
     max-height: 500px;
     padding: 50px;
     border-radius: 0.45rem;
+    margin: 50px auto;
 }
 
 .profile-form div {
